--- a/sass/components/_timeline.scss
+++ b/sass/components/_timeline.scss
@@ -1,6 +1,5 @@
 .timeline {
     position: relative;
-    overflow-y: scroll;
 
     &__event {
         // Create 2x2 event grid
