--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,6 +1,12 @@
 html {
+    overflow-y: scroll;
     scroll-behavior: smooth;
     scroll-snap-type: y mandatory;
+    scroll-snap-type: mandatory; /* Firefox */  
+    -ms-scroll-snap-type: mandatory; /* IE/Edge */  
+    -webkit-scroll-snap-type: mandatory; /* Safari */  
+    -webkit-scroll-snap-destination: 0% 0%; 
+    -webkit-overflow-scrolling: touch;
 }
 
 body {
